# MapCleaner_Unofficial

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml  config_glim.yaml  config_kitti.yaml
docker/: Dockerfile  ENTRYPOINT.sh  README.md  run.bash
docker/data/: .gitignore
docker/data/config/: .gitignore  config.yaml
include/map_cleaner/: BGKFilter.hpp  DataLoader.hpp  DivideByTerrain.hpp  GridMapBuilder.hpp  GroundSegmentation.hpp  MedianFilter.hpp  MovingPointIdentification.hpp  TrajectoryFilter.hpp  VarianceFilter.hpp  utils.hpp
launch/: run.launch  run_kitti.launch
rviz/: rviz.rviz
src/: map_cleaner.cpp
