<?xml version="1.0"?>
<package format="2">
  <name>map_cleaner</name>
  <version>0.0.0</version>
  <description>The map_cleaner package</description>

  <maintainer email="main@todo.todo">main</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pcl_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_rviz_plugin</depend>

  <export>

  </export>
</package>
